# garmin-workouts

./: .dockerignore  .editorconfig  .flake8  .garmin-cookies.txt  .gitignore  .mergify.yml  AGENTS.md  Dockerfile  Pipfile  README.md  account.py  analyse.ipynb  bot.py  configreader.py  docker-compose.yaml  docker-compose.yml  dockerwrap.sh  garminclient.py  mise.toml  pace.yaml  pyproject.toml  requirements.txt  requirements_deb.txt  requirements_dev.txt  sample_account.py  sample_planning.yaml  target.yaml  workout-import.py
.github/: dependabot.yml  mergify.yml
garmintools/: workoutcli.py
garminworkouts/: __main__.py  workoutexporter.py
running_workouts/: 15min_recovery.yaml  45min_recovery.yaml  5x5x10k_pace.yaml  8k_tempo_run.yaml  8mile_long_run.yaml  90s.yaml  exp_workout.yaml  in_control.yaml  speedurance.yaml  suckcess_run.yaml
sample_workouts/: ou-3x6.yaml  ss-3x12.yaml  ss-4x9.yaml  tempo-3x15.yaml  vo2max-5x4.yaml
tests/: conftest.py  test___main__.py  test_main.py
trainingplans/: lists.py
workouts/: BBtNZT2.yaml  BBtNZTD.yaml  BBtNZTT.yaml  BBtNZTY.yaml  BBtO2fm.yaml  BBtO2he.yaml  BBtO4hE.yaml  BBtO4hu.yaml  BBtO4iZ.yaml  BBtO4j5-hiit.yaml  BBtO4j5.yaml  BBtO4jb.yaml  BBtO4kR_yoga.yaml  BBtO4kr.yaml  BBtO6RE.yaml  BBtO6T3.yaml  BBtO6T4.yaml  BBtO6T6-hiit.yaml  BBtO6Uh.yaml  BBtObWr.yaml  BBtObWy.yaml  BBtObXE.yaml  BBtObZn.yaml  BBtOeuH.yaml  BBtOev2.yaml  BBtOevG.yaml  BBtOgDB.yaml  BBtRFq7.yaml  GGMYzBJ.yaml  GGOHysB.yaml  GGSZHmx.yaml  GGhobBo.yaml  GGkGYuV.yaml  GGllYVt.yaml  GGpVOOe.yaml  GGpmXTj.yaml  GGrGTHT.yaml  GGyWDEj.yaml  (+15 more)
(+6495 files in other folders)
