[project]
name = "garmin-workouts"
version = "0.1.0"
description = "Command line tools for managing Garmin Connect workouts"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests==2.33.0",
    "pyyaml==6.0.2",
    "numpy==2.2.2",
    "xlrd==2.0.1",
    "pandas==2.2.3",
    "cloudscraper==1.2.71",
]

[project.scripts]
garmin-workouts = "garminworkouts.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-httpserver==1.1.1",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "-rA --cov=garminworkouts --cov-branch --cov-fail-under=50"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
